MR2-305 - Followup, ensure overlay is behind urlbar
Differential Revision: https://phabricator.services.mozilla.com/D121701

--- a/browser/components/companion/content/browser.css
+++ b/browser/components/companion/content/browser.css
@@ -279,4 +279,5 @@
   right: 0;
   left: var(--companion-width);
   background:rgba(0, 0, 0, 0.1);
+  z-index: -1;
 }
